added list school api
