# internal/api/handler/auth.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"eduflow/internal/api/response"
 	"eduflow/internal/models"
 	"net/http"
 
@@ -14,19 +15,19 @@ import (
 // @Produce json
 // @Param login body models.LoginRequest true "Login User"
 // @Success 200 {object} models.LoginResponse
-// @Failure 400,401,404,500 {object} BaseResponse
+// @Failure 400,401,404,500 {object} response.BaseResponse
 // @Router /api/v1/auth/login [post]
 func (h *Handler) loginUser(c *gin.Context) {
 	var body models.LoginRequest
 
 	if err := c.ShouldBindJSON(&body); err != nil {
-		errorResponse(c, http.StatusBadRequest, err)
+		response.ErrorResponse(c, http.StatusBadRequest, err)
 		return
 	}
 
 	accessToken, refreshToken, err := h.service.Authorization.Login(body)
 	if err != nil {
-		fromError(c, err)
+		response.FromError(c, err)
 		return
 	}
 
